--- a/Google_Summer_of_Code.mw
+++ b/Google_Summer_of_Code.mw
@@ -1,16 +1,3 @@
-Gentoo has been part of the '''Google Summer of Code''' program since 2006.
-
-You can find more information on our involvement in these years:
-
-<div class="list-group" style="font-size: 125%;">
-[[Google Summer of Code/2019|<i class="fa fa-fw fa-google"></i> GSoC 2019|class=list-group-item]]
-[[Google Summer of Code/2018|<i class="fa fa-fw fa-google"></i> GSoC 2018|class=list-group-item]]
-[[Google Summer of Code/2017|<i class="fa fa-fw fa-google"></i> GSoC 2017|class=list-group-item]]
-[[Google Summer of Code/2016|<i class="fa fa-fw fa-google"></i> GSoC 2016|class=list-group-item]]
-[[Google Summer of Code/2015|<i class="fa fa-fw fa-google"></i> GSoC 2015|class=list-group-item]]
-[[Google Summer of Code/2014|<i class="fa fa-fw fa-google"></i> GSoC 2014|class=list-group-item]]
-[[Google Summer of Code/2013|<i class="fa fa-fw fa-google"></i> GSoC 2013|class=list-group-item]]
-[[Google Summer of Code/2012|<i class="fa fa-fw fa-google"></i> GSoC 2012|class=list-group-item]]
-</div>
+For more information about Gentoo's involvement in the Summer of Code, see http://www.gentoo.org/proj/en/userrel/soc/
 
 [[Category:Google Summer of Code]]
