--- a/Google_Summer_of_Code%2F2012.mw
+++ b/Google_Summer_of_Code%2F2012.mw
@@ -1,62 +1,3 @@
-{{Archived|date=2012}}
-__NOTOC__
-<div style="width:57%; padding-right: 3%; float: left;">
-
-== GsoC 2012 with Gentoo ==
-
-[[File:Gsoc-2012-logo-color.png|GSoC 2012 logo|right|link=]]
-
-Welcome to the Gentoo Wiki portal on Google's Summer of Code 2012.
-
-Here, you will find all information on Gentoo's participation in this year's edition, how to apply for a project, what ideas we have and who to contact with any questions.
-
-Quick links:
-
-{{LinkBox|icon=IconStore.png|link=Google Summer of Code/2012/Ideas|title=Project Ideas}}
-<br style="clear: both" />
-
-== Further resources ==
-
-=== For students ===
-
-* [http://www.gentoo.org/proj/en/userrel/soc/applying.xml Our application guidelines]
-* [http://google-melange.appspot.com/document/show/gsoc_program/google/gsoc2012/faqs Google FAQ]
-
-=== For mentors ===
-
-* [http://www.gentoo.org/proj/en/userrel/soc/mentoring.xml Mentoring guidelines]
-
-== Getting help ==
-
-In case your question was not answered on our website, please do not hesitate to get in touch with us. Here is how you can reach us:
-* {{IRC|gentoo-soc}} IRC channel - (please be patient, there is not always someone on who can help)
-* {{Mail|gentoo-soc@lists.gentoo.org}} mailing list - ([https://www.gentoo.org/get-involved/mailing-lists/all-lists.html subscription required], [http://archives.gentoo.org/gentoo-soc/ Browse the archives])
-</div>
-
-<div style="width: 40%; float: left;">
-
-== News ==
-
-{{News|date=Mar 27, 2012|header=Applications are now open|body=
-Student applications are now open. We're looking forward to seeing your applications posted to our [http://www.google-melange.com/gsoc/org/google/gsoc2012/gentoo GSoC page].
-}}
-{{News|date=Feb 7, 2012|header=Google announces GSoC 2012|body=
-Google has [http://google-opensource.blogspot.com/2012/02/google-summer-of-code-2012-is-on.html announced] the launch of the 2012 edition of the Summer of Code on its open source blog.
-
-The next step for us will be working on our application and ideas.
-}}
-
-== Important events ==
-
-* March 9, 2300 UTC: '''Organization application deadline'''
-* March 26: '''Student application period begins'''
-* April 6, 1900 UTC: '''Student application deadline'''
-* May 21: '''Start of coding'''
-* July 13: '''Midterm evaluation deadline'''
-* August 24: '''Final evaluation deadline'''
-
-For more information, consult the [http://google-melange.appspot.com/document/show/gsoc_program/google/gsoc2012/faqs#timeline official timeline].
-</div>
-<br style="clear: both" />
+GSoC 2012 has been announced.
 
 [[Category:Google Summer of Code]]
