Created page with "{{GSoCIdea |Title goes here |short description |Long description  Lorem ipsum  This can have more paragraphs |* contact 1 <foobar@gentoo.org> * contact 2 <foobar@gentoo.org> |Pyt..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FTemplate_Idea.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FTemplate_Idea.mw
@@ -1,15 +1,11 @@
-<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
-                Also, no line break after the page title!  -->
-{{GSoCIdea|My new idea|year=2012|
-<!-- Description goes here: --> 
-This idea is only a placeholder to give you an idea how to create your own idea.
-|
-<!-- List contacts: -->
-* [mailto:test@gentoo.org Dev E. Loper]
-* [mailto:test@gentoo.org Dev E. Loper]
-|
-<!-- List required skills: -->
-* Python
-* Git}}
+{{GSoCIdea
+|Title goes here
+|short description
+|Long description
 
-[[Category: GSoC 2012 Ideas]]
+Lorem ipsum
+
+This can have more paragraphs
+|* contact 1 <foobar@gentoo.org>
+* contact 2 <foobar@gentoo.org>
+|Python, C, Git}}
