--- a/ZoneMinder.mw
+++ b/ZoneMinder.mw
@@ -1,262 +1,97 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.zoneminder.com|header="true"}}
-|{{InfoBox wikipedia}}
+ZoneMinder is a system to provide monitoring, logging and a browser based interface to security cameras.  As of this writing, there is no ebuild (there used to be one.)  It can support multiple V4L and network connected devices with a clear uncluttered interface in any browser.
+
+{{Warning|It can be tricky to get working to your satisfaction. This is a blow by blow summary of an install from source on my system, you will probably need to get more sources of information}}
+
+= Get the source =
+{{RootCmd|cd /usr/src
+|wget http://www2.zoneminder.com/downloads/ZoneMinder-1.25.0.tar.gz
+|tar xzvf ZoneMinder-1.25.0.tar.gz
 }}
 
-'''ZoneMinder''' is [[Article description::open source software used to capture, analyse, record, and monitor cameras.]]
-
-== Installation ==
-
-=== Dependencies ===
-
-{{Important|The following required packages must be configured properly for ZoneMinder to work.}}
-
-* Apache 2: [[Apache2|www-servers/apache]]
-* MySQL: [[MySQL|dev-db/mariadb]]
-* PHP: [[PHP|dev-lang/php]]
-
-=== USE flags ===
-
-Enable the following USE flags for {{Package|dev-lang/php}}, {{Package|app-eselect/eselect-php}}, and {{Package|www-misc/zoneminder}}:
-
-{{FileBox|filename=/etc/portage/package.use|1=
-dev-lang/php apache2 cgi curl fpm inifile pdo mysql mysqli sockets
-app-eselect/eselect-php apache2 fpm
-www-misc/zoneminder curl ffmpeg ssl
-}}
-
-=== Emerge ===
-
-Install ZoneMinder:
-
-{{Emerge|www-misc/zoneminder}}
-
-== Configuration ==
-
-=== Apache ===
-
-* Select correct version of PHP:
-
-{{RootCmd|eselect php list apache2|output=<pre>
-  [1]   php7.2 *
-</pre>}}
-
-* Edit {{Path|/etc/php/apache2-php7.2/php.ini}} to reflect the following:
-
-{{FileBox|filename=/etc/php/apache2-php7.2/php.ini|lang=ini|1=
-date.timezone = <Country/City>
-}}
-
-* Edit {{Path|/etc/conf.d/apache2}} and add <code>-D PHP -D PROXY</code> to <var>APACHE2_OPTS</var>:
-
-{{FileBox|filename=/etc/conf.d/apache2|lang=bash|1=
-APACHE2_OPTS="-D DEFAULT_VHOST -D INFO -D SSL -D SSL_DEFAULT_VHOST -D LANGUAGE -D PHP -D PROXY"
-}}
-
-* There is an example config in /usr/share/doc/zoneminder*/10_zoneminder.conf.bz2:
-
-{{RootCmd|bzcat /usr/share/doc/zoneminder-*/10_zoneminder.conf.bz2 > /etc/apache2/vhosts.d/10_zoneminder.conf}}
-
-* Or, create an Apache vhost in {{Path|/etc/apache2/vhosts.d/10_zoneminder.conf}}
-
-{{FileBox|filename=/etc/apache2/vhosts.d/10_zoneminder.conf|1=
-ScriptAlias /zm/cgi-bin/ "/usr/libexec/zoneminder/cgi-bin/"
-
-<Directory "/usr/libexec/zoneminder/cgi-bin">
-  AllowOverride All
-  Options +ExecCGI
-  Require all granted
-</Directory>
-
-# Order matters. This alias must come first.
-Alias /zm/cache "/var/cache/zoneminder"
-
-<Directory "/var/cache/zoneminder">
-  Options -Indexes +MultiViews +FollowSymLinks
-  AllowOverride None
-  Require all granted
-</Directory>
-
-Alias /zm "/usr/share/zoneminder/www"
-
-<Directory "/usr/share/zoneminder/www">
-  Options -Indexes +MultiViews +FollowSymLinks
-  AllowOverride All
-  Require all granted
-</Directory>
-
-}}
-
-=== MySQL ===
-
-* Create ZoneMinder's database, <code>zm</code>, and setup a new user <code>zmuser</code>.
-
-{{RootCmd|mysql -p|output=<pre>
+= MySQL =
+* Create a database
+{{Cmd|mysql -p|output=<pre>
 mysql> create database zm;
+mysql> exit;
+</pre>
+}}
 
-mysql> grant lock tables,alter,drop,select,insert,update,delete,create,index,alter routine,create routine, trigger,execute on zm.* to 'zmuser'@localhost identified by 'zmpass';
-Query OK, 0 rows affected (0.00 sec)
+* Import the database schema and base data
+{{Cmd|mysql -p zm < /usr/src/Zoneminder-<version>/db/zm_create.sql}}
+
+* Create a MySQL user for ZM to use.  If you change the user and/or password from the defaults here, then make sure you set those in the source configure phase.
+{{Cmd|mysql -p|output=<pre>
+mysql> use zm;
+Reading table information for completion of table and column names
+You can turn off this feature to get a quicker startup with -A
+
+Database changed
+mysql> grant select,insert,update,delete on zm.* to 'zmuser'@localhost identified by 'zmpass';Query OK, 0 rows affected (0.00 sec)
 
 mysql> flush privileges;
 Query OK, 0 rows affected (0.00 sec)
-
-mysql> exit;
-</pre>}}
-
-* Import the database schema and base data, the {{Path|.sql}} script is created by the configure phase above, so make sure you do that first.
-
-{{RootCmd|mysql -p zm < /usr/share/zoneminder/db/zm_create.sql}}
-
-=== ZoneMinder ===
-
-* Edit {{Path|/etc/zm.conf}} and add the above MySQL database username and password:
-
-{{FileBox|filename=/etc/zm.conf|lang=bash|1=
-# ZoneMinder database user
-ZM_DB_USER=zmuser
-
-# ZoneMinder database password
-ZM_DB_PASS=zmpass
+</pre>
 }}
 
-* By default {{Package|www-misc/zoneminder}} installs as a virtual host under {{Path|http://cctvhost.domain/zm/}} - this requires <var>PATH_ZMS</var> to be updated in the webui:
-  Options -> Paths -> PATH_ZMS = /zm/cgi-bin/zms
+= Dependencies =
+This is the Perl module checking from configure.  You'll have to add any missing ones yourself.
+<pre>
+checking for perl... perl
+checking for perl version greater than or equal to 5.6.0... ok
+checking for perl module Sys::Syslog... ok
+checking for perl module DBI... ok
+checking for perl module DBD::mysql... ok
+checking for perl module Getopt::Long... ok
+checking for perl module Time::HiRes... ok
+checking for perl module Date::Manip... ok
+checking for perl module LWP::UserAgent... ok
+checking for perl module ExtUtils::MakeMaker... ok
+checking for perl module Module::Load... ok
+checking for perl module Device::SerialPort... ok
+checking for perl module Net::FTP... ok
+checking for perl module Net::SFTP::Foreign... no
+configure: WARNING: Net::SFTP::Foreign is required for automatic event uploading using sftp
+checking for perl module Expect... ok
+checking for perl module Archive::Tar... ok
+checking for perl module Archive::Zip... ok
+checking for perl module Net::SMTP... ok
+checking for perl module MIME::Lite... ok
+checking for perl module MIME::Entity... ok
+checking for perl module X10::ActiveHome... no
+configure: WARNING: X10::ActiveHome is required for X.10 support
+</pre>
 
-== Init ==
+{{Note|dev-perl/net-sftp has quite a few deps and does not seem to include Net::SFTP::Foreign}}
+{{Note|There are no X10 modules in Portage}}
 
-=== OpenRC ===
+= Configure =
+{{Cmd|<nowiki>./configure --with-webdir=/var/www/localhost/htdocs/zm --with-cgidir=/var/www/localhost/cgi-bin CPPFLAGS=-D__STDC_CONSTANT_MACROS --use-mmap=no
+</nowiki>}}
 
-Add Apache to the default runlevel and start the service:
+{{Note|<nowiki>--prefix=/usr/local by default - probably best to leave as is to avoid conflicting with Portage controlled stuff</nowiki>}}
+{{Note|<nowiki>No Sys::Mmap in Portage hence --use-mmap=no</nowiki>}}
+{{Note|<nowiki>CPPFLAGS needed to compile ffmpeg modules</nowiki>}}
 
-{{RootCmd
-|rc-update add apache2 default
-|rc-service apache2 start
+= Apache =
+* Enable PHP short tags if you get the following errors in Apache's error log and in the browser output
+<pre>
+PHP Parse error:  syntax error, unexpected $end in /var/www/localhost/htdocs/zm/includes/functions.php on line 2437
+</pre>
+* Set date.timezone in php.ini if the output is full of timezone errors to eg "Europe\London"
+
+{{RootCmd|eselect php list apache2|output=<pre>
+  [1]   php5.3 *
+  [2]   php5.4
+</pre>
+}}
+{{File|/etc/php/apache2-php5.3/php.ini|Snippet from php.ini for Apache|<pre>
+short_open_tag = On
+date.timezone = "Europe/London"
+</pre>
 }}
 
-Add PHP to the default runlevel and start the service:
-
-{{RootCmd
-|rc-update add php-fpm default
-|rc-service php-fpm start
-}}
-
-Add MySQL to the default runlevel and start the service:
-
-{{RootCmd
-|rc-update add mysql default
-|rc-service mysql start
-}}
-
-Add ZoneMinder to the default runlevel and start:
-
-{{RootCmd
-|rc-update add zoneminder default
-|rc-service zoneminder start
-}}
-
-=== systemd ===
-
-Enable the Apache to start on system boot and start the service:
-
-{{RootCmd
-|systemctl enable apache2
-|systemctl start apache2
-}}
-
-Enable the PHP service to start on system boot and start the service:
-
-{{RootCmd
-|systemctl enable php-fpm
-|systemctl start php-fpm
-}}
-
-Enable the MySQL service to start on system boot and start the service:
-
-{{RootCmd
-|systemctl enable mysql
-|systemctl start mysql
-}}
-
-Enable the ZoneMinder service to start on system boot and start the service:
-
-{{RootCmd
-|systemctl enable zoneminder
-|systemctl start zoneminder
-}}
-
-== SELinux ==
-
-When using [[SELinux]], first create a SELinux policy for the application:
-
-{{FileBox|filename=local_zoneminder.te|title=Type enforcement rules for ZoneMinder|1=
-module local_zoneminder 1.0; 
-
-require { 
-               type httpd_t;
-               type initrc_var_run_t;
-               type initrc_t;
-               type v4l_device_t;
-               type file_t;
-              class unix_stream_socket { read connectto };
-              class file { read lock };
-              class shm { unix_read unix_write associate read write getattr };
-              class chr_file getattr;
-}
-
-#============= httpd_t ============== 
-allow httpd_t initrc_t:unix_stream_socket connectto;
-allow httpd_t initrc_t:shm { unix_read unix_write associate read write getattr };
-allow httpd_t initrc_var_run_t:file { read lock };
-allow httpd_t v4l_device_t:chr_file getattr;
-}}
-
-Now build the modules:
-
-{{RootCmd
-|checkmodule -M -m -o local_zoneminder.mod local_zoneminder.te 
-|semodule_package -o local_zoneminder.pp -m local_zoneminder.mod
-|semodule -i local_zoneminder.pp
-}}
-
-== Other ==
-
+=Other=
 Shared memory:
+ sysctl kernel.shmmax=536870912
 
-{{RootCmd|sysctl kernel.shmmax{{=}}536870912}}
-
-=== Upgrading ===
-
-ZoneMinder includes a Perl utility {{c|zmupdate.pl}} to update the database schema as needed. Note: a Perl interpreter will required to run the script.
-
-Specify the previous version and database credentials for the <code>zm</code> database:
-
-{{RootCmd
-|/usr/bin/zmupdate.pl --version{{=}}1.30.2 --user{{=}}zmuser --pass{{=}}zmpass
-|output=<pre>
-Initiating database upgrade to version 1.30.4 from version 1.30.2
-
-Please ensure that ZoneMinder is stopped on your system prior to upgrading the database.
-Press enter to continue or ctrl-C to stop :
-
-Do you wish to take a backup of your database prior to upgrading?
-This may result in a large file in /var/tmp/zm if you have a lot of events.
-Press 'y' for a backup or 'n' to continue : y
-Creating backup to /var/tmp/zm/zm-1.30.2.dump. This may take several minutes.
-Database successfully backed up to /var/tmp/zm/zm-1.30.2.dump, proceeding to upgrade.
-
-Upgrading database to version 1.30.4
-Loading config from DB
-Saving config to DB
-Upgrading DB to 1.30.3 from 1.30.2
-
-Database successfully upgraded to version 1.30.3.
-Upgrading DB to 1.30.4 from 1.30.2
-
-Database successfully upgraded to version 1.30.4.
-
-Database upgrade to version 1.30.4 successful.
-</pre>}}
-
-== See also ==
-
-* {{See also|PHP}}
+[[Category:Software]]
